--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,22 +7,33 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/main_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Health_Connect"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".registration.ForgotPassword"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".registration.LoginActivity"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".registration.RegistrationActivity"-->
+<!--            android:exported="false" />-->
         <activity
-            android:name=".registration.ForgotPassword"
+            android:name=".ChatActivity"
             android:exported="false" />
         <activity
-            android:name=".registration.LoginActivity"
+            android:name=".Signup"
             android:exported="false" />
         <activity
-            android:name=".registration.RegistrationActivity"
-            android:exported="false" >
-
+            android:name=".Login"
+            android:exported="false">
         </activity>
+        <activity
+            android:name=".ChatMainActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
