--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Health_Connect"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".registration.ForgotPassword"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".registration.LoginActivity"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".registration.RegistrationActivity"-->
-<!--            android:exported="false" />-->
         <activity
             android:name=".ChatActivity"
             android:exported="false" />
@@ -36,14 +27,15 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan"> <!-- This line ensures the BottomNavigationView stays static -->
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
     </application>
 
 </manifest>
